add SqlWorker using SqlClient